Added new method ListUsers. Metrics monitoring was changed to track metrics per endpoint, not per method path.
